{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 78,
  "lineage": "abf1f18b-150b-429d-465e-3d7b9fc95578",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:089117446722:internet-gateway/igw-04c9449f974ade2f7",
            "id": "igw-04c9449f974ade2f7",
            "owner_id": "089117446722",
            "region": "us-east-1",
            "tags": {
              "Name": "Docker_IGW"
            },
            "tags_all": {
              "Name": "Docker_IGW"
            },
            "vpc_id": "vpc-04ec8b2c7176dd7ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dockerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:089117446722:route-table/rtb-072973c2cc7665896",
            "id": "rtb-072973c2cc7665896",
            "owner_id": "089117446722",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c9449f974ade2f7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Docker-RouteTable"
            },
            "tags_all": {
              "Name": "Docker-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ec8b2c7176dd7ab"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089117446722",
            "id": "rtb-072973c2cc7665896",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.myIGW",
            "aws_vpc.dockerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myRTAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c619554d59625934",
            "region": "us-east-1",
            "route_table_id": "rtb-072973c2cc7665896",
            "subnet_id": "subnet-0c555ee530af63038"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.myIGW",
            "aws_route_table.myRouteTable",
            "aws_subnet.mySubnet",
            "aws_vpc.dockerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mySG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:089117446722:security-group/sg-0805ea9032b513783",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0805ea9032b513783",
            "ingress": [],
            "name": "mySG",
            "name_prefix": "",
            "owner_id": "089117446722",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Docker-SG"
            },
            "tags_all": {
              "Name": "Docker-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ec8b2c7176dd7ab"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089117446722",
            "id": "sg-0805ea9032b513783",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dockerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mySubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:089117446722:subnet/subnet-0c555ee530af63038",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c555ee530af63038",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "089117446722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Docker_subnet"
            },
            "tags_all": {
              "Name": "Docker_subnet"
            },
            "vpc_id": "vpc-04ec8b2c7176dd7ab"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089117446722",
            "id": "subnet-0c555ee530af63038",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dockerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dockerVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:089117446722:vpc/vpc-04ec8b2c7176dd7ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0201be64b6e9eceb6",
            "default_route_table_id": "rtb-0cab6fd5120482b9c",
            "default_security_group_id": "sg-05f159c0e57acf7d4",
            "dhcp_options_id": "dopt-0a93ad4c1be9763c1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ec8b2c7176dd7ab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cab6fd5120482b9c",
            "owner_id": "089117446722",
            "region": "us-east-1",
            "tags": {
              "Name": "Docker_vpc"
            },
            "tags_all": {
              "Name": "Docker_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "myEgressRule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:089117446722:security-group-rule/sgr-02ad89ab4cc02f839",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02ad89ab4cc02f839",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0805ea9032b513783",
            "security_group_rule_id": "sgr-02ad89ab4cc02f839",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089117446722",
            "id": "sgr-02ad89ab4cc02f839",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.mySG",
            "aws_vpc.dockerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "myIngressRule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:089117446722:security-group-rule/sgr-054ed7733d703228a",
            "cidr_ipv4": "187.200.117.93/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-054ed7733d703228a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0805ea9032b513783",
            "security_group_rule_id": "sgr-054ed7733d703228a",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089117446722",
            "id": "sgr-054ed7733d703228a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.mySG",
            "aws_vpc.dockerVPC"
          ]
        }
      ]
    },
    {
      "module": "module.server_1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "DockerInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-052064a798f08f0d3",
            "arn": "arn:aws:ec2:us-east-1:089117446722:instance/i-0e8dea256aa5826f7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e8dea256aa5826f7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e5dce3dda62d26ee"
              }
            ],
            "primary_network_interface_id": "eni-0e5dce3dda62d26ee",
            "private_dns": "ip-192-168-13-99.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.13.99",
            "public_dns": "ec2-54-224-224-188.compute-1.amazonaws.com",
            "public_ip": "54.224.224.188",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-010922f19e5a60fd5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c555ee530af63038",
            "tags": {
              "Name": "Docker-instance_1"
            },
            "tags_all": {
              "Name": "Docker-instance_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0805ea9032b513783"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089117446722",
            "id": "i-0e8dea256aa5826f7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.mySG",
            "aws_subnet.mySubnet",
            "aws_vpc.dockerVPC"
          ]
        }
      ]
    },
    {
      "module": "module.server_2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "DockerInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-052064a798f08f0d3",
            "arn": "arn:aws:ec2:us-east-1:089117446722:instance/i-0a2b7694fdf75c05d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-ssm-instance-profile",
            "id": "i-0a2b7694fdf75c05d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-045177f630a3a46c0"
              }
            ],
            "primary_network_interface_id": "eni-045177f630a3a46c0",
            "private_dns": "ip-192-168-14-248.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.14.248",
            "public_dns": "ec2-3-90-243-190.compute-1.amazonaws.com",
            "public_ip": "3.90.243.190",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d2d32d1dd0546dfc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c555ee530af63038",
            "tags": {
              "Name": "Docker-instance_2"
            },
            "tags_all": {
              "Name": "Docker-instance_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0805ea9032b513783"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "089117446722",
            "id": "i-0a2b7694fdf75c05d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_profile",
            "aws_iam_role.server_role",
            "aws_security_group.mySG",
            "aws_subnet.mySubnet",
            "aws_vpc.dockerVPC",
            "module.s3_bucket.aws_s3_bucket.dockerBucket",
            "module.s3_bucket.aws_s3_bucket_versioning.versioning_Set",
            "module.server_1.aws_instance.DockerInstance"
          ]
        }
      ]
    }
  ]
}